--- a/public_html/web_project/styles.css
+++ b/public_html/web_project/styles.css
@@ -3519,7 +3519,7 @@ input[readonly] {
     font-size: 16px;
     background-color: #f5f5f5;
     color: #666;
-    cursor: not-allowed;
+    /*cursor: not-allowed;*/
 }
 
 /*fieldset {*/
